<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <TextView
    android:id="@+id/tvShopTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/coffee_shop_title"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="16dp"/>

  <ImageView
    android:id="@+id/ivShopImage"
    android:layout_width="0dp"
    android:layout_height="200dp"
    android:scaleType="centerCrop"
    android:contentDescription="@string/shop_image"
    android:src="@drawable/outline_add_photo_alternate_24"
    app:layout_constraintTop_toBottomOf="@id/tvShopTitle"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <TextView
    android:id="@+id/tvDescription"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:padding="12dp"
    android:text="@string/this_coffee_shop"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ivShopImage"
    app:layout_constraintVertical_bias="0.021"/>

</androidx.constraintlayout.widget.ConstraintLayout>